Bug 714752: Make imgIContainerObserver::FrameChanged take an imgIRequest*. r=joe sr=roc